IAMEN/XPS-Q8/XPS-Q-Drivers/XPS-Q_Drivers/XPS-Q_DLL_Drivers/XPS_Q8_drivers.h

DLL int __stdcall TCP_ConnectToServer(char *Ip_Address, int Ip_Port, double TimeOut);
 
DLL void __stdcall TCP_SetTimeout(int SocketIndex, double Timeout);
 
DLL void __stdcall TCP_CloseSocket(int SocketIndex);
 
DLL char * __stdcall TCP_GetError(int SocketIndex);
 
DLL char * __stdcall GetLibraryVersion(void);
 
DLL int __stdcall ControllerMotionKernelMinMaxTimeLoadGet (int SocketIndex, double * MinimumCPUTotalLoadRatio, double * MaximumCPUTotalLoadRatio, double * MinimumCPUCorrectorLoadRatio, double * MaximumCPUCorrectorLoadRatio, double * MinimumCPUProfilerLoadRatio, double * MaximumCPUProfilerLoadRatio, double * MinimumCPUServitudesLoadRatio, double * MaximumCPUServitudesLoadRatio);  /* Get controller motion kernel minimum and maximum time load */
DLL int __stdcall ControllerMotionKernelMinMaxTimeLoadReset (int SocketIndex);  /* Reset controller motion kernel min/max time load */
DLL int __stdcall ControllerMotionKernelTimeLoadGet (int SocketIndex, double * CPUTotalLoadRatio, double * CPUCorrectorLoadRatio, double * CPUProfilerLoadRatio, double * CPUServitudesLoadRatio);  /* Get controller motion kernel time load */
DLL int __stdcall ControllerRTTimeGet (int SocketIndex, double * CurrentRTPeriod, double * CurrentRTUsage);  /* Get controller corrector period and calculation time */
DLL int __stdcall ControllerSlaveStatusGet (int SocketIndex, int * SlaveControllerStatus);  /* Read slave controller status */
DLL int __stdcall ControllerSlaveStatusStringGet (int SocketIndex, int SlaveControllerStatusCode, char * SlaveControllerStatusString);  /* Return the slave controller status string */
DLL int __stdcall ControllerSynchronizeCorrectorISR (int SocketIndex, char * ModeString);  /* Synchronize controller corrector ISR */
DLL int __stdcall ControllerStatusGet (int SocketIndex, int * ControllerStatus);  /* Get controller current status and reset the status */
DLL int __stdcall ControllerStatusRead (int SocketIndex, int * ControllerStatus);  /* Read controller current status */
DLL int __stdcall ControllerStatusStringGet (int SocketIndex, int ControllerStatusCode, char * ControllerStatusString);  /* Return the controller status string */
DLL int __stdcall ElapsedTimeGet (int SocketIndex, double * ElapsedTime);  /* Return elapsed time from controller power on */
DLL int __stdcall ErrorStringGet (int SocketIndex, int ErrorCode, char * ErrorString);  /* Return the error string corresponding to the error code */
DLL int __stdcall FirmwareVersionGet (int SocketIndex, char * Version);  /* Return firmware version */
DLL int __stdcall TCLScriptExecute (int SocketIndex, char * TCLFileName, char * TaskName, char * ParametersList);  /* Execute a TCL script from a TCL file */
DLL int __stdcall TCLScriptExecuteAndWait (int SocketIndex, char * TCLFileName, char * TaskName, char * InputParametersList, char * OutputParametersList);  /* Execute a TCL script from a TCL file and wait the end of execution to return */
DLL int __stdcall TCLScriptExecuteWithPriority (int SocketIndex, char * TCLFileName, char * TaskName, char * TaskPriorityLevel, char * ParametersList);  /* Execute a TCL script with defined priority */
DLL int __stdcall TCLScriptKill (int SocketIndex, char * TaskName);  /* Kill TCL Task */
DLL int __stdcall TCLScriptKillAll (int SocketIndex);  /* Kill all TCL Tasks */
DLL int __stdcall TimerGet (int SocketIndex, char * TimerName, int * FrequencyTicks);  /* Get a timer */
DLL int __stdcall TimerSet (int SocketIndex, char * TimerName, int FrequencyTicks);  /* Set a timer */
DLL int __stdcall Reboot (int SocketIndex);  /* Reboot the controller */
DLL int __stdcall Login (int SocketIndex, char * Name, char * Password);  /* Log in */
DLL int __stdcall CloseAllOtherSockets (int SocketIndex);  /* Close all socket beside the one used to send this command */
DLL int __stdcall HardwareDateAndTimeGet (int SocketIndex, char * DateAndTime);  /* Return hardware date and time */
DLL int __stdcall HardwareDateAndTimeSet (int SocketIndex, char * DateAndTime);  /* Set hardware date and time */
DLL int __stdcall EventAdd (int SocketIndex, char * PositionerName, char * EventName, char * EventParameter, char * ActionName, char * ActionParameter1, char * ActionParameter2, char * ActionParameter3);  /* ** OBSOLETE ** Add an event */
DLL int __stdcall EventGet (int SocketIndex, char * PositionerName, char * EventsAndActionsList);  /* ** OBSOLETE ** Read events and actions list */
DLL int __stdcall EventRemove (int SocketIndex, char * PositionerName, char * EventName, char * EventParameter);  /* ** OBSOLETE ** Delete an event */
DLL int __stdcall EventWait (int SocketIndex, char * PositionerName, char * EventName, char * EventParameter);  /* ** OBSOLETE ** Wait an event */
DLL int __stdcall EventExtendedConfigurationTriggerSet (int SocketIndex, int NbElements, char * ExtendedEventNameList, char * EventParameter1List, char * EventParameter2List, char * EventParameter3List, char * EventParameter4List);  /* Configure one or several events */
DLL int __stdcall EventExtendedConfigurationTriggerGet (int SocketIndex, char * EventTriggerConfiguration);  /* Read the event configuration */
DLL int __stdcall EventExtendedConfigurationActionSet (int SocketIndex, int NbElements, char * ExtendedActionNameList, char * ActionParameter1List, char * ActionParameter2List, char * ActionParameter3List, char * ActionParameter4List);  /* Configure one or several actions */
DLL int __stdcall EventExtendedConfigurationActionGet (int SocketIndex, char * ActionConfiguration);  /* Read the action configuration */
DLL int __stdcall EventExtendedStart (int SocketIndex, int * ID);  /* Launch the last event and action configuration and return an ID */
DLL int __stdcall EventExtendedAllGet (int SocketIndex, char * EventActionConfigurations);  /* Read all event and action configurations */
DLL int __stdcall EventExtendedGet (int SocketIndex, int ID, char * EventTriggerConfiguration, char * ActionConfiguration);  /* Read the event and action configuration defined by ID */
DLL int __stdcall EventExtendedRemove (int SocketIndex, int ID);  /* Remove the event and action configuration defined by ID */
DLL int __stdcall EventExtendedWait (int SocketIndex);  /* Wait events from the last event configuration */
DLL int __stdcall GatheringConfigurationGet (int SocketIndex, char * Type);  /*Read different mnemonique type */
DLL int __stdcall GatheringConfigurationSet (int SocketIndex, int NbElements, char * TypeList);  /* Configuration acquisition */
DLL int __stdcall GatheringCurrentNumberGet (int SocketIndex, int * CurrentNumber, int * MaximumSamplesNumber);  /* Maximum number of samples and current number during acquisition */
DLL int __stdcall GatheringStopAndSave (int SocketIndex);  /* Stop acquisition and save data */
DLL int __stdcall GatheringDataAcquire (int SocketIndex);  /* Acquire a configured data */
DLL int __stdcall GatheringDataGet (int SocketIndex, int IndexPoint, char * DataBufferLine);  /* Get a data line from gathering buffer */
DLL int __stdcall GatheringDataMultipleLinesGet (int SocketIndex, int IndexPoint, int NumberOfLines, char * DataBufferLine);  /* Get multiple data lines from gathering buffer */
DLL int __stdcall GatheringReset (int SocketIndex);  /* Empty the gathered data in memory to start new gathering from scratch */
DLL int __stdcall GatheringRun (int SocketIndex, int DataNumber, int Divisor);  /* Start a new gathering */
DLL int __stdcall GatheringRunAppend (int SocketIndex);  /* Re-start the stopped gathering to add new data */
DLL int __stdcall GatheringStop (int SocketIndex);  /* Stop the data gathering (without saving to file) */
DLL int __stdcall GatheringExternalConfigurationSet (int SocketIndex, int NbElements, char * TypeList);  /* Configuration acquisition */
DLL int __stdcall GatheringExternalConfigurationGet (int SocketIndex, char * Type);  /* Read different mnemonique type */
DLL int __stdcall GatheringExternalCurrentNumberGet (int SocketIndex, int * CurrentNumber, int * MaximumSamplesNumber);  /* Maximum number of samples and current number during acquisition */
DLL int __stdcall GatheringExternalDataGet (int SocketIndex, int IndexPoint, char * DataBufferLine);  /* Get a data line from external gathering buffer */
DLL int __stdcall GatheringExternalStopAndSave (int SocketIndex);  /* Stop acquisition and save data */
DLL int __stdcall GlobalArrayGet (int SocketIndex, int Number, char * ValueString);  /* Get global array value */
DLL int __stdcall GlobalArraySet (int SocketIndex, int Number, char * ValueString);  /* Set global array value */
DLL int __stdcall DoubleGlobalArrayGet (int SocketIndex, int Number, double * DoubleValue);  /* Get double global array value */
DLL int __stdcall DoubleGlobalArraySet (int SocketIndex, int Number, double DoubleValue);  /* Set double global array value */