IAMEN/XPS-Q8/XPS-Q-Drivers/XPS-Q_Drivers/XPS-Q_DLL_Drivers/XPS_Q8_drivers.bas


Declare Function TCP_ConnectToServer Lib "XPS_Q8_drivers.dll" (ByVal Ip_Address As String, ByVal Ip_Port As Long, ByVal TimeOut As Double) As Long
Declare Sub TCP_SetTimeout Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal Timeout As Double)
Declare Sub TCP_CloseSocket Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long)
Declare Function TCP_GetError Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long) As String
Declare Function GetLibraryVersion Lib "XPS_Q8_drivers.dll" () As String
Declare Function ControllerMotionKernelMinMaxTimeLoadGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, MinimumCPUTotalLoadRatio As Double, MaximumCPUTotalLoadRatio As Double, MinimumCPUCorrectorLoadRatio As Double, MaximumCPUCorrectorLoadRatio As Double, MinimumCPUProfilerLoadRatio As Double, MaximumCPUProfilerLoadRatio As Double, MinimumCPUServitudesLoadRatio As Double, MaximumCPUServitudesLoadRatio As Double) As Long '  Get controller motion kernel minimum and maximum time load
Declare Function ControllerMotionKernelMinMaxTimeLoadReset Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long) As Long '  Reset controller motion kernel min/max time load
Declare Function ControllerMotionKernelTimeLoadGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, CPUTotalLoadRatio As Double, CPUCorrectorLoadRatio As Double, CPUProfilerLoadRatio As Double, CPUServitudesLoadRatio As Double) As Long '  Get controller motion kernel time load
Declare Function ControllerRTTimeGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, CurrentRTPeriod As Double, CurrentRTUsage As Double) As Long '  Get controller corrector period and calculation time
Declare Function ControllerSlaveStatusGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, SlaveControllerStatus As Long) As Long '  Read slave controller status
Declare Function ControllerSlaveStatusStringGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal SlaveControllerStatusCode As Long, ByVal SlaveControllerStatusString As String) As Long '  Return the slave controller status string
Declare Function ControllerSynchronizeCorrectorISR Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal ModeString As String) As Long '  Synchronize controller corrector ISR
Declare Function ControllerStatusGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ControllerStatus As Long) As Long '  Get controller current status and reset the status
Declare Function ControllerStatusRead Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ControllerStatus As Long) As Long '  Read controller current status
Declare Function ControllerStatusStringGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal ControllerStatusCode As Long, ByVal ControllerStatusString As String) As Long '  Return the controller status string
Declare Function ElapsedTimeGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ElapsedTime As Double) As Long '  Return elapsed time from controller power on
Declare Function ErrorStringGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal ErrorCode As Long, ByVal ErrorString As String) As Long '  Return the error string corresponding to the error code
Declare Function FirmwareVersionGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal Version As String) As Long '  Return firmware version
Declare Function TCLScriptExecute Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal TCLFileName As String, ByVal TaskName As String, ByVal ParametersList As String) As Long '  Execute a TCL script from a TCL file
Declare Function TCLScriptExecuteAndWait Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal TCLFileName As String, ByVal TaskName As String, ByVal InputParametersList As String, ByVal OutputParametersList As String) As Long '  Execute a TCL script from a TCL file and wait the end of execution to return
Declare Function TCLScriptExecuteWithPriority Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal TCLFileName As String, ByVal TaskName As String, ByVal TaskPriorityLevel As String, ByVal ParametersList As String) As Long '  Execute a TCL script with defined priority
Declare Function TCLScriptKill Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal TaskName As String) As Long '  Kill TCL Task
Declare Function TCLScriptKillAll Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long) As Long '  Kill all TCL Tasks
Declare Function TimerGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal TimerName As String, FrequencyTicks As Long) As Long '  Get a timer
Declare Function TimerSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal TimerName As String, ByVal FrequencyTicks As Long) As Long '  Set a timer
Declare Function Reboot Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long) As Long '  Reboot the controller
Declare Function Login Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal Name As String, ByVal Password As String) As Long '  Log in
Declare Function CloseAllOtherSockets Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long) As Long '  Close all socket beside the one used to send this command
Declare Function HardwareDateAndTimeGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal DateAndTime As String) As Long '  Return hardware date and time
Declare Function HardwareDateAndTimeSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal DateAndTime As String) As Long '  Set hardware date and time
Declare Function EventAdd Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal EventName As String, ByVal EventParameter As String, ByVal ActionName As String, ByVal ActionParameter1 As String, ByVal ActionParameter2 As String, ByVal ActionParameter3 As String) As Long '  ** OBSOLETE ** Add an event
Declare Function EventGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal EventsAndActionsList As String) As Long '  ** OBSOLETE ** Read events and actions list
Declare Function EventRemove Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal EventName As String, ByVal EventParameter As String) As Long '  ** OBSOLETE ** Delete an event
Declare Function EventWait Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal EventName As String, ByVal EventParameter As String) As Long '  ** OBSOLETE ** Wait an event
Declare Function EventExtendedConfigurationTriggerSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal NbElements As Long, ByVal ExtendedEventNameList As String, ByVal EventParameter1 As String, ByVal EventParameter2 As String, ByVal EventParameter3 As String, ByVal EventParameter4 As String) As Long '  Configure one or several events
Declare Function EventExtendedConfigurationTriggerGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal EventTriggerConfiguration As String) As Long '  Read the event configuration
Declare Function EventExtendedConfigurationActionSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal NbElements As Long, ByVal ExtendedActionNameList As String, ByVal ActionParameter1 As String, ByVal ActionParameter2 As String, ByVal ActionParameter3 As String, ByVal ActionParameter4 As String) As Long '  Configure one or several actions
Declare Function EventExtendedConfigurationActionGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal ActionConfiguration As String) As Long '  Read the action configuration
Declare Function EventExtendedStart Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ID As Long) As Long '  Launch the last event and action configuration and return an ID
Declare Function EventExtendedAllGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal EventActionConfigurations As String) As Long '  Read all event and action configurations
Declare Function EventExtendedGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal ID As Long, ByVal EventTriggerConfiguration As String, ByVal ActionConfiguration As String) As Long '  Read the event and action configuration defined by ID
Declare Function EventExtendedRemove Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal ID As Long) As Long '  Remove the event and action configuration defined by ID
Declare Function EventExtendedWait Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long) As Long '  Wait events from the last event configuration
Declare Function GatheringConfigurationGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal TypeName As String) As Long ' Read different mnemonique type
Declare Function GatheringConfigurationSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal NbElements As Long, ByVal TypeNameList As String) As Long '  Configuration acquisition
Declare Function GatheringCurrentNumberGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, CurrentNumber As Long, MaximumSamplesNumber As Long) As Long '  Maximum number of samples and current number during acquisition
Declare Function GatheringStopAndSave Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long) As Long '  Stop acquisition and save data
Declare Function GatheringDataAcquire Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long) As Long '  Acquire a configured data
Declare Function GatheringDataGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal IndexPoint As Long, ByVal DataBufferLine As String) As Long '  Get a data line from gathering buffer
Declare Function GatheringDataMultipleLinesGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal IndexPoint As Long, ByVal NumberOfLines As Long, ByVal DataBufferLine As String) As Long '  Get multiple data lines from gathering buffer
Declare Function GatheringReset Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long) As Long '  Empty the gathered data in memory to start new gathering from scratch
Declare Function GatheringRun Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal DataNumber As Long, ByVal Divisor As Long) As Long '  Start a new gathering
Declare Function GatheringRunAppend Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long) As Long '  Re-start the stopped gathering to add new data
Declare Function GatheringStop Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long) As Long '  Stop the data gathering (without saving to file)
Declare Function GatheringExternalConfigurationSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal NbElements As Long, ByVal TypeNameList As String) As Long '  Configuration acquisition
Declare Function GatheringExternalConfigurationGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal TypeName As String) As Long '  Read different mnemonique type
Declare Function GatheringExternalCurrentNumberGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, CurrentNumber As Long, MaximumSamplesNumber As Long) As Long '  Maximum number of samples and current number during acquisition
Declare Function GatheringExternalDataGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal IndexPoint As Long, ByVal DataBufferLine As String) As Long '  Get a data line from external gathering buffer
Declare Function GatheringExternalStopAndSave Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long) As Long '  Stop acquisition and save data
Declare Function GlobalArrayGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal Number As Long, ByVal ValueString As String) As Long '  Get global array value
Declare Function GlobalArraySet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal Number As Long, ByVal ValueString As String) As Long '  Set global array value
Declare Function DoubleGlobalArrayGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal Number As Long, DoubleValue As Double) As Long '  Get double global array value
Declare Function DoubleGlobalArraySet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal Number As Long, ByVal DoubleValue As Double) As Long '  Set double global array value
